use name property instead of title

--- a/pages/crime-incidents.html
+++ b/pages/crime-incidents.html
@@ -1,5 +1,5 @@
 ---
-title: Crime incidents 2015 - October 2016
+name: Crime incidents 2015 - October 2016
 description: |
   Philadelphia Police Department crime incidents from calendar year 2015 to October 2016,
   including Part I and Part II crimes. UCR codes are generalized and incident
