--- a/pages/crime-incidents.html
+++ b/pages/crime-incidents.html
@@ -1,5 +1,5 @@
 ---
-name: Crime Incidents 2006 - Present
+title: Crime Incidents 2006 - Present
 description: |
   Philadelphia Police Department crime incidents from calendar year 2006 to present,
   including Part I and Part II crimes. UCR codes are generalized and incident
