--- a/pages/crime-incidents.html
+++ b/pages/crime-incidents.html
@@ -36,7 +36,7 @@ download: https://www.opendataphilly.org/dataset/crime-incidents
       "dataset": "pol_incidents_part1_part2",
       "chartType": "choropleth",
       "groupBy": "dc_dist",
-      "boundaries": "https://timwis.carto.com/api/v2/sql?q=select+*+from+public.police_district_boundaries&format=geojson",
+      "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+police_districts&format=geojson",
       "boundariesLabel": "dist_num",
       "boundariesId": "dist_numc"
     }
