add li-service-requests, li-trade-licenses, and li-business-licenses. Fix some table names

--- a/pages/li-imminently-dangerous.html
+++ b/pages/li-imminently-dangerous.html
@@ -53,7 +53,7 @@ download:
   ],
   [
     {
-      "title": "Case Inspections",
+      "title": "Imminently Dangerous Violations",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
