--- a/pages/li-violations.html
+++ b/pages/li-violations.html
@@ -61,7 +61,7 @@ description: |
   ],
   [
     {
-      "title": "Case Inspections",
+      "title": "Violations",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
