--- a/pages/li-building-permits.html
+++ b/pages/li-building-permits.html
@@ -8,7 +8,6 @@ description: |
   systems in a structure. Plumbing and electrical permits, among others, may
   also be required for new or existing buildings.
   For more information, please visit: http://www.phila.gov/li/Pages/PermitsCertificates.aspx
-download:
 ---
 [
   [
@@ -78,7 +77,7 @@ download:
   ],
   [
     {
-      "title": "Case Inspections",
+      "title": "Building Permits",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
