--- a/pages/li-unsafe.html
+++ b/pages/li-unsafe.html
@@ -53,7 +53,7 @@ download:
   ],
   [
     {
-      "title": "Case Inspections",
+      "title": "Unsafe Violations",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
