--- a/pages/employee-salaries.html
+++ b/pages/employee-salaries.html
@@ -1,11 +1,11 @@
 ---
 title: Employee Salaries & Overtime
 description: |
-  As of December 31, 2016
+  <p>As of December 31, 2016</p>
 
-  Note: Since employee counts fluctuate throughout the year, the sum of annual
-  salaries does not reflect the total budgeted amount.
-
+  <p>Note: Since employee counts fluctuate throughout the year, the sum of annual
+    salaries does not reflect the total budgeted amount.</p>
+download: https://www.opendataphilly.org/dataset/employee-salaries-overtime
 ---
 [
   [
