--- a/pages/li-business-licenses.html
+++ b/pages/li-business-licenses.html
@@ -1,14 +1,15 @@
 ---
 title: L&I Business Licenses
 description: |
-  Licenses are required for individuals and businesses to engage in select
+  <p>Licenses are required for individuals and businesses to engage in select
   commercial activities (i.e. to sell goods, food, or for plumbers and
   contractors). This dataset includes information on application license type,
   applicant name, property for which the license would be issued, application
-  data, issue date and expiration date.
+  data, issue date and expiration date.</p>
 
-  Note: Some business licenses are incorrectly missing the associated address
-  in this dataset, which may limit searching.
+  <p>Note: Some business licenses are incorrectly missing the associated address
+  in this dataset, which may limit searching.</p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-business-licenses
 ---
 [
   [
