--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -1,9 +1,9 @@
 ---
 title: L&I Clean and Seals
 description: |
-  Address, date of abatement, and more for properties that
-  have been cleaned and sealed by the L&I Clean & Seal Unit.
-download: 
+  <p>Address, date of abatement, and more for properties that
+  have been cleaned and sealed by the L&I Clean & Seal Unit.</p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-clean-and-seal
 ---
 [
   [
