--- a/pages/li-imminently-dangerous.html
+++ b/pages/li-imminently-dangerous.html
@@ -1,9 +1,9 @@
 ---
 title: L&I Open Imminently Dangerous Violations
 description: |
-  All active and open "Imminently Dangerous" code violations. Reference Section PM-110 of
-  The Philadelphia Property Maintenance Code for more information.
-download:
+  <p>All active and open "Imminently Dangerous" code violations. Reference Section PM-110 of
+  The Philadelphia Property Maintenance Code for more information.</p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-violations
 ---
 [
   [
