--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -1,9 +1,9 @@
 ---
 title: L&I Case Inspections
 description: |
-  All inspections completed on a property with property
-  maintenance violations by an inspector of the Department of Licenses & Inspections.
-download:
+  <p>All inspections completed on a property with property
+  maintenance violations by an inspector of the Department of Licenses & Inspections.</p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-inspections
 ---
 [
   [
