--- a/pages/li-service-requests.html
+++ b/pages/li-service-requests.html
@@ -1,12 +1,13 @@
 ---
 title: L&I Service Requests
 description: |
-  Service requests that were entered via 311 or by an individual in the
+  <p>Service requests that were entered via 311 or by an individual in the
   department including a description of the request/complaint, the
   priority/type of the complaint, date of scheduled inspection, who the
   assigned inspector is, and what the outcome of the inspection was, if a case
   or if a case is not required, as well as information about the source of the
-  request.
+  request. </p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-service-requests
 ---
 [
   [
