--- a/pages/li-trade-licenses.html
+++ b/pages/li-trade-licenses.html
@@ -1,10 +1,11 @@
 ---
 title: L&I Trade Licenses
 description: |
-  Information regarding individuals who have applied for trades licenses such
+  <p>Information regarding individuals who have applied for trades licenses such
   as General Contractor, Master Plumber, and more. Information includes the
   individual's name, license number, license status issue date, expiration
-  date, company name, and revenue code.
+  date, company name, and revenue code. </p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-trade-licenses
 ---
 [
   [
