--- a/pages/li-unsafe.html
+++ b/pages/li-unsafe.html
@@ -1,9 +1,9 @@
 ---
 title: L&I Open Unsafe Violations
 description: |
-  All active and open "Unsafe" code violations. Reference Section PM-304.1 of
-  The Philadelphia Property Maintenance Code
-download:
+  <p>All active and open "Unsafe" code violations. Reference Section PM-304.1 of
+  The Philadelphia Property Maintenance Code</p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-violations
 ---
 [
   [
