--- a/pages/li-violations.html
+++ b/pages/li-violations.html
@@ -1,8 +1,9 @@
 ---
 title: L&I Violations
 description: |
-  Violations issued by the Department of Licenses and Inspections in reference
-  to the Philadelphia Building Construction and Occupancy Code.
+  <p>Violations issued by the Department of Licenses and Inspections in reference
+  to the Philadelphia Building Construction and Occupancy Code.</p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-violations
 ---
 [
   [
