--- a/pages/opa-assessments.html
+++ b/pages/opa-assessments.html
@@ -1,14 +1,11 @@
 ---
-title: L&I Building Permits
+title: OPA Assessments
 description: |
-  <p>The Department of Licenses & Inspections reviews construction plans and
-  conducts building inspections to ensure the safety of the workers and the
-  public. Building permits are required before beginning projects to enlarge,
-  repair, change, add to or demolish a structure, and to install equipment or
-  systems in a structure. Plumbing and electrical permits, among others, may
-  also be required for new or existing buildings.</p>
-  <p>For more information, please visit: http://www.phila.gov/li/Pages/PermitsCertificates.aspx</p>
-download: https://www.opendataphilly.org/dataset/licenses-and-inspections-building-permits
+  <p>Records of buildings and parcel data from the Office of Property Assessment.
+  All maps and charts are interactive: click on an area to filter the
+  visualization by that dimension, and scroll down to view the filtered results
+  as a table.</p>
+download: https://www.opendataphilly.org/dataset/opa-property-assessments
 ---
 [
   [
