--- a/pages/vehicle_pedestrian_investigations.html
+++ b/pages/vehicle_pedestrian_investigations.html
@@ -1,8 +1,8 @@
 ---
 title: Vehicle & Pedestrian Investigations
 description:
-   2014 - Present. Updated daily with 14-day lag for operational approval
-   processes.
+   <p>2014 - Present. Updated daily with 14-day lag for operational approval
+   processes.</p>
 download: https://phl.carto.com/api/v2/sql?filename=car_ped_stops&q=SELECT+*+FROM+(SELECT+*+FROM+phl.car_ped_stops)+as+subq+&api_key=0bf2b6e314df588f664ec1976d88235a94282fe9&skipfields=the_geom_webmercator&format=csv
 ---
 [
