changed chart type for weekdays from pie => bar

--- a/pages/vehicle_pedestrian_investigations.html
+++ b/pages/vehicle_pedestrian_investigations.html
@@ -11,7 +11,7 @@ download: https://phl.carto.com/api/v2/sql?filename=car_ped_stops&q=SELECT+*+FRO
      "provider": "carto",
      "domain": "phl.carto.com",
      "dataset": "car_ped_stops",
-     "chartType": "pie",
+     "chartType": "bar",
      "groupBy": "weekday"
    },
     { "title":"Number of Investigations by Date/Time",
