--- a/pages/opa-property-records.html
+++ b/pages/opa-property-records.html
@@ -1,5 +1,5 @@
 ---
-title: OPA Assessments
+title: OPA Property Records
 description: |
   <p>Records of buildings and parcel data from the Office of Property Assessment.
   All maps and charts are interactive: click on an area to filter the
@@ -10,76 +10,61 @@ download: https://www.opendataphilly.org/dataset/opa-property-assessments
 [
   [
     {
-      "title": "Permit Issue Date",
-      "description": "The date and time that the permit was issued.",
-      "provider": "carto",
-      "domain": "phl.carto.com",
-      "dataset": "li_permits",
-      "chartType": "datetime",
-      "groupBy": "date_trunc('month', permitissuedate)",
-      "triggerField": "permitissuedate"
-    }
-  ],
-  [
-    {
       "title":  "Census Tract",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_permits",
+      "dataset": "opa_properties_public",
       "chartType": "choropleth",
-      "groupBy": "censustract",
+      "groupBy": "census_tract",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
       "boundariesLabel": "namelsad10",
       "boundariesId": "name10_padded"
     },
     {
-      "title": "Permit Description",
-      "description": "The description of the type of permit issued.",
+      "title": "Number of Properties by Zoning",
+      "description": "Determines the acceptable uses of the property (commercial, residential, etc.)",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_permits",
+      "dataset": "opa_properties_public",
       "chartType": "bar",
-      "groupBy": "permitdescription"
+      "groupBy": "zoning"
     }
   ],
   [
     {
-      "title": "Type of Work",
-      "description": "L&I descriptor of the type of work permitted.",
+      "title": "Number of Properties by Category Code Description",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_permits",
+      "dataset": "opa_properties_public",
       "chartType": "bar",
-      "groupBy": "permitdescription"
+      "groupBy": "category_code_description"
     }
   ],
   [
      {
-      "title": "Status",
-      "description": "Status of the permit.",
+      "title": "Number of Properties by Owner 1",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_permits",
-      "chartType": "pie",
-      "groupBy": "status"
+      "dataset": "opa_properties_public",
+      "chartType": "bar",
+      "groupBy": "owner_1"
     },
     {
-      "title": "Owner Name",
-      "description": "Current owner of the property",
+      "title": "Number of Properties by Year Built",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_permits",
+      "dataset": "opa_properties_public",
       "chartType": "bar",
-      "groupBy": "ownername"
+      "groupBy": "year_built"
     }
   ],
   [
     {
-      "title": "Building Permits",
+      "title": "Properties",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_permits",
+      "dataset": "opa_properties_public",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
