--- a/pages/parking-violations.html
+++ b/pages/parking-violations.html
@@ -19,15 +19,15 @@ download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+
       "triggerField": "issue_date_and_time"
     },
     {
-      "title":"Violation Location--Census Tracts 2010-2013",
+      "title":"Violation Location--Zip Code",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
       "chartType": "choropleth",
-      "groupBy": "fine",
-      "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
-      "boundariesLabel": "namelsad10",
-      "boundariesId": "name10_padded"
+      "groupBy": "violation_location_zip",
+      "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+zip_codes&format=geojson",
+      "boundariesLabel": "code",
+      "boundariesId": "code"
     }
   ],
   [
@@ -36,7 +36,7 @@ download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
-      "chartType": "pie",
+      "chartType": "bar",
       "groupBy": "violation_description"
     },
     {
@@ -44,7 +44,7 @@ download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
-      "chartType": "pie",
+      "chartType": "bar",
       "groupBy": "issuing_agency"
     }
   ],
