--- a/pages/shootings.html
+++ b/pages/shootings.html
@@ -36,7 +36,7 @@ download: https://phl.carto.com/api/v2/sql?filename=shootings&q=SELECT+*+FROM+(S
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "shootings",
-      "chartType": "bar",
+      "chartType": "pie",
       "groupBy": "officer_involved"
     }
   ],
