Update and rename opa-property-records.html to property-assessments.html

--- a/pages/property-assessments.html
+++ b/pages/property-assessments.html
@@ -1,5 +1,5 @@
 ---
-title: OPA Property Records
+title: OPA Property Assessments
 description: |
   <p>Records of buildings and parcel data from the Office of Property Assessment.
   All maps and charts are interactive: click on an area to filter the
