--- a/pages/property-tax-balances.html
+++ b/pages/property-tax-balances.html
@@ -10,17 +10,6 @@ download: https://www.opendataphilly.org/dataset/property-tax-balances
 [
   [
     {
-      "title":  "Census Tract",
-      "provider": "carto",
-      "domain": "phl.carto.com",
-      "dataset": "real_estate_tax_balances",
-      "chartType": "choropleth",
-      "groupBy": "census_tracts_2010___2013",
-      "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
-      "boundariesLabel": "namelsad10",
-      "boundariesId": "name10_padded"
-    },
-    {
       "title": "Sum of Totals by Tax Period",
       "description": "Determines the acceptable uses of the property (commercial, residential, etc.)",
       "provider": "carto",
@@ -30,6 +19,15 @@ download: https://www.opendataphilly.org/dataset/property-tax-balances
       "aggregateFunction": "sum",
       "aggregateField": "total",
       "groupBy": "tax_period"
+    },
+    {
+      "title":  "Owner",
+      "description": "Property owner",
+      "provider": "carto",
+      "domain": "phl.carto.com",
+      "dataset": "real_estate_tax_balances",
+      "chartType": "bar",
+      "groupBy": "owner"
     }
   ],
   [
