parking-violations: add descriptions

--- a/pages/parking-violations.html
+++ b/pages/parking-violations.html
@@ -11,6 +11,7 @@ download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+
   [
     {
       "title":"Issue Date and Time",
+      "description": "Date and time the violation was written",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
@@ -19,7 +20,7 @@ download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+
       "triggerField": "issue_date_and_time"
     },
     {
-      "title":"Violation Location--Zip Code",
+      "title":"Zip Code",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
@@ -33,6 +34,7 @@ download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+
   [
     {
       "title":"Violation Description",
+      "description": "Short description of the type of violation that occurred",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
@@ -41,6 +43,7 @@ download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+
     },
     {
       "title":"Issuing Agency",
+      "description": "Agency that issued the violation",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
