use ODP link for download link

--- a/pages/shootings.html
+++ b/pages/shootings.html
@@ -3,7 +3,7 @@ title: Shooting Victims
 description:
   <p>Criminal Shooting Victims and Officer Involved Shootings from 1/1/15
   Through Yesterday</p>
-download: https://phl.carto.com/api/v2/sql?filename=shootings&q=SELECT+*+FROM+(SELECT+*+FROM+phl.shootings)+as+subq+&api_key=0bf2b6e314df588f664ec1976d88235a94282fe9&skipfields=the_geom_webmercator&format=csv
+download: https://www.opendataphilly.org/dataset/shooting-victims
 ---
 
 [
