--- a/pages/vehicle-pedestrian-investigations.html
+++ b/pages/vehicle-pedestrian-investigations.html
@@ -3,7 +3,7 @@ title: Vehicle & Pedestrian Investigations
 description:
    <p>2014 - Present. Updated daily with 14-day lag for operational approval
    processes.</p>
-download: https://phl.carto.com/api/v2/sql?filename=car_ped_stops&q=SELECT+*+FROM+(SELECT+*+FROM+phl.car_ped_stops)+as+subq+&api_key=0bf2b6e314df588f664ec1976d88235a94282fe9&skipfields=the_geom_webmercator&format=csv
+download: https://www.opendataphilly.org/dataset/vehicle-pedestrian-investigations
 ---
 [
   [
