--- a/pages/parking-violations.html
+++ b/pages/parking-violations.html
@@ -5,7 +5,7 @@ description:
     in Philadelphia.  The data represented below is a sample of parking
     violations occurring between 2012-2015 with license plate numbers anonymized
     for privacy.</p>
-download: https://phl.carto.com/api/v2/sql?filename=parking_violations&q=SELECT+*+FROM+(SELECT+*+FROM+phl.parking_violations)+as+subq+&api_key=0bf2b6e314df588f664ec1976d88235a94282fe9&skipfields=the_geom_webmercator&format=csv
+download: https://www.opendataphilly.org/dataset/parking-violations
 ---
 [
   [
