sort 311 requests by requested_datetime descending

--- a/pages/311-requests.html
+++ b/pages/311-requests.html
@@ -68,6 +68,7 @@ download: https://www.opendataphilly.org/dataset/311-service-and-information-req
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "requested_datetime desc",
       "dataset": "public_cases_fc",
       "columnsToHide": [
         "cartodb_id",
