--- a/pages/child_blood_lead_levels_by_ct.html
+++ b/pages/child_blood_lead_levels_by_ct.html
@@ -24,7 +24,7 @@ download: http://www.opendataphilly.org/
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
       "boundariesLabel": "namelsad10",
       "boundariesId": "geoid10",
-      "valueField": "max(percent_bll_gte_5_mg_per_dec)"
+      "valueField": "max(perc_5plus)"
     }
   ],
   [
@@ -38,7 +38,7 @@ download: http://www.opendataphilly.org/
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
       "boundariesLabel": "namelsad10",
       "boundariesId": "geoid10",
-      "valueField": "max(bll_gte_5_mg_per_dec)"
+      "valueField": "max(num_bll_5plus)"
     },
     {
       "title":  "Total number of children younger than 6 screened",
@@ -50,7 +50,7 @@ download: http://www.opendataphilly.org/
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
       "boundariesLabel": "namelsad10",
       "boundariesId": "geoid10",
-      "valueField": "max(children_lt_6_screened)"
+      "valueField": "max(num_screen)"
 
     }
   ],
@@ -60,7 +60,7 @@ download: http://www.opendataphilly.org/
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "order": "percent_bll_gte_5_mg_per_dec desc nulls last",
+      "order": "perc_5plus desc nulls last",
       "dataset": "child_blood_lead_levels_by_ct",
       "columnsToHide":
       [
