--- a/pages/parking-violations.html
+++ b/pages/parking-violations.html
@@ -2,8 +2,8 @@
 title: Parking Violations
 description:
     <p>This data set reflects parking violations reported by authorized agencies
-    in Philadelphia.  The data represented below is a sample of parking
-    violations occurring between 2012-2015 with license plate numbers anonymized
+    in Philadelphia. The data below represents parking
+    violations occurring since 2012 with license plate numbers anonymized
     for privacy.</p>
 download: https://www.opendataphilly.org/dataset/parking-violations
 ---
@@ -58,6 +58,7 @@ download: https://www.opendataphilly.org/dataset/parking-violations
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
+      "order": "issue_date_and_time desc",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
