--- a/pages/real-estate-tax-delinquencies.html
+++ b/pages/real-estate-tax-delinquencies.html
@@ -7,15 +7,13 @@ download: https://www.opendataphilly.org/dataset/real-estate-tax-delinquencies
 [
   [
     {
-      "title": "Sum of Totals by Tax Period",
+      "title": "Number of properties by years owed",
       "description": "",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "real_estate_tax_delinquencies",
       "chartType": "bar",
-      "aggregateFunction": "sum",
-      "aggregateField": "total_due",
-      "groupBy": "most_recent_year_owed"
+      "groupBy": "num_years_owed"
     },
     {
       "title":  "Owner",
