--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -8,7 +8,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
   [
     {
       "title": "Demolition Date",
-      "description": "The date the demolition was completed.",
+      "description": "Date building permit or L+I contractor bid was closed.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "li_demolitions",
@@ -40,7 +40,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
     },
     {
       "title": "Demolition Type",
-      "description": "The type of demolition.",
+      "description": "The type of demolition. 'Permit'means a demolition was an action of a private owner, who was issued a building permit from L+I. 'Violation Case'means the demolition was an action of the Department of License and Inspections, due to dangerous building conditions, as a result of violation of the city's building code. ,
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "li_demolitions",
@@ -51,7 +51,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
   [
     {
       "title": "Owner Name",
-      "description": "Current owner of the property",
+      "description": "Owner of the property as identified by the Office of Property Assessment.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "li_demolitions",
