--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -40,7 +40,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
     },
     {
       "title": "Demolition Type",
-      "description": "The type of demolition. 'Permit'means a demolition was an action of a private owner, who was issued a building permit from L+I. 'Violation Case'means the demolition was an action of the Department of License and Inspections, due to dangerous building conditions, as a result of violation of the city's building code.",
+      "description": "The type of demolition. 'Permit' means a demolition was an action of a private owner, who was issued a building permit from L+I. 'Violation Case' means the demolition was an action of the Department of License and Inspections, due to dangerous building conditions, as a result of violation of the city's building code.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "li_demolitions",
@@ -65,7 +65,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
       "domain": "phl.carto.com",
       "dataset": "li_demolitions",
       "chartType": "pie",
-      "groupBy": "permitstatus"
+      "groupBy": "status"
     }
   ],
   [
